--- a/SMStextclassifier_KB.ipynb
+++ b/SMStextclassifier_KB.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/cossmikus/RNN_SMS_text_classifier/blob/main/SMStextclassifier_KB.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 177,
+      "execution_count": null,
       "metadata": {
         "id": "8RZOuS9LWQvv",
         "colab": {
@@ -107,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 178,
+      "execution_count": null,
       "metadata": {
         "id": "lMHwYXHXCar3",
         "colab": {
@@ -168,7 +178,7 @@
         },
         "outputId": "b99faaee-ad74-45a0-be9c-5b16b59606a7"
       },
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -333,7 +343,7 @@
         },
         "outputId": "f524b199-af65-4855-8de5-e78f3ecf25b4"
       },
-      "execution_count": 180,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +506,7 @@
         },
         "outputId": "29618805-f68b-41a6-e803-e906c2ddd100"
       },
-      "execution_count": 181,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +532,7 @@
         },
         "outputId": "593ecd38-f9ec-4bb5-b3f3-f7f921f6f099"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -548,7 +558,7 @@
       "metadata": {
         "id": "TxSmMNC9B-Lu"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +573,7 @@
         "id": "k-tDxiPiQPA5",
         "outputId": "f7f3a563-930a-444c-ff73-16bbb3b8395f"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -600,7 +610,7 @@
       "metadata": {
         "id": "4nIl_xZoVPAK"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -618,7 +628,7 @@
       "metadata": {
         "id": "VkCAEFLUG_m1"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -633,7 +643,7 @@
         },
         "outputId": "98ac4efd-6853-4c10-8497-d1434ba991f0"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -655,7 +665,7 @@
       "metadata": {
         "id": "RgTKnL3Mh_B5"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -673,7 +683,7 @@
       "metadata": {
         "id": "RqXKzwfbYlY_"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -684,7 +694,7 @@
       "metadata": {
         "id": "oAHEwIx0Q-K0"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -695,7 +705,7 @@
       "metadata": {
         "id": "DTim442TO3Fl"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -706,7 +716,7 @@
       "metadata": {
         "id": "8V45Hya7QxrV"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +727,7 @@
       "metadata": {
         "id": "ra3s9xU8RYJy"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -731,7 +741,7 @@
       "metadata": {
         "id": "B99nI5eoSGK2"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +752,7 @@
       "metadata": {
         "id": "StV59jjZTTwM"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -753,7 +763,7 @@
       "metadata": {
         "id": "JISh9lEnTgda"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +774,7 @@
       "metadata": {
         "id": "Qz-vccwITgkv"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -775,7 +785,7 @@
       "metadata": {
         "id": "diWdEy5GFHq5"
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -796,7 +806,7 @@
         },
         "outputId": "6f588141-a3cc-4674-c6b9-19220fa68f28"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,7 +850,7 @@
       "metadata": {
         "id": "EiY5k_jeLcxV"
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -858,7 +868,7 @@
         "id": "9NLq5zXXMVNm",
         "outputId": "edb2a77a-4e69-471b-e7af-84e5be01b2c1"
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -876,12 +886,12 @@
       "metadata": {
         "id": "Jxbmf8P5V469"
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 202,
+      "execution_count": null,
       "metadata": {
         "id": "J9tD9yACG6M9",
         "colab": {
@@ -918,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": null,
       "metadata": {
         "id": "Dxotov85SjsC",
         "colab": {
@@ -979,7 +989,8 @@
     "colab": {
       "collapsed_sections": [],
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
