--- a/SMStextclassifier_KB.ipynb
+++ b/SMStextclassifier_KB.ipynb
@@ -993,8 +993,9 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
+       "display_name": "Python 3.8.0 64-bit ('venv_2': virtualenv)",
+   "language": "python",
+   "name": "venv_2"
     },
     "language_info": {}
   },
