--- a/SMStextclassifier_K.ipynb
+++ b/SMStextclassifier_K.ipynb
@@ -985,7 +985,9 @@
       "display_name": "Python 3",
       "name": "python3"
     },
-    "language_info": {}
+    "language_info": {
+      "name" : "Kassymkhan"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
